syntax = "proto3";

package ecommerce;

option go_package = "ecommerce/";

import "google/protobuf/wrappers.proto";

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}

message CombinedShipment {
    string id = 1;
    string status = 2;
    repeated Order orderList = 3;
}

service OrderManagement {
    rpc processOrders(stream google.protobuf.StringValue) returns (stream CombinedShipment) {}
}
